update :: fire-and-forget 사용